
name:                fixmon
version:             0.1.0.0
synopsis:            Monitoring tools           
description:         Fixmon        
license:             BSD3          
license-file:        LICENSE
author:              Alexey Smirnov
maintainer:          chemistmail@gmail.com
-- copyright:           
category:            Network           
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.12

executable fixmon
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    OverloadedStrings, FlexibleInstances, GADTs, DeriveDataTypeable, ExistentialQuantification, BangPatterns, RecordWildCards, ScopedTypeVariables, DeriveGeneric, TemplateHaskell, FlexibleContexts, QuasiQuotes, GeneralizedNewtypeDeriving, StandaloneDeriving
  build-depends:       base >=4.6 && <5
                     , binary >=0.7 && <0.8
                     , containers >=0.5 && <0.6
                     , bytestring >=0.10 && <0.11
                     , time >=1.4 && <1.5
                     , directory >=1.2 && <1.3
                     , deepseq >=1.3 && <1.4
                     , vector
                     , vector-binary-instances
                     , parsec
                     , yaml
                     , text
                     , distributed-process
                     , distributed-process-platform
                     , text-binary
                     , mtl
                     , aeson
                     , cron
                     , lists
                     , warp
                     , wai
                     , wai-extra
                     , wai-middleware-static
                     , bimap
                     , scientific
                     , unordered-containers
                     , network
                     , network-transport
                     , network-transport-tcp
                     , snmp
                     , attoparsec
                     , http-types
                     , http-conduit
                     , conduit
                     , pipes
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:   -Wall -threaded -rtsopts -auto-all -caf-all

executable memory
  main-is:             Memory.hs            
  other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, GADTs, ExistentialQuantification, FlexibleInstances, DeriveGeneric, DeriveDataTypeable, RankNTypes, ScopedTypeVariables, MultiParamTypeClasses, FlexibleContexts, QuasiQuotes, StandaloneDeriving
  build-depends:       base >=4.6 && <5, 
                       containers , 
                       aeson , 
                       bimap , 
                       old-locale , 
                       text , 
                       lists , 
                       text-binary,
                       mtl , 
                       vector , 
                       vector-binary-instances ,
                       network , 
                       network-conduit , 
                       yaml , 
                       bytestring , 
                       conduit , 
                       http-conduit,
                       transformers , 
                       binary , 
                       cereal , 
                       attoparsec , 
                       time ,
                       directory , 
                       http-types , 
                       unordered-containers , 
                       network-transport,
                       network-transport-tcp,
                       distributed-process,
                       distributed-process-platform,
                       cron ,
                       NetSNMP,
                       lens == 4.3.*,
                       wai,
                       warp,
                       wai-extra,
                       scientific,
                       deepseq,
                       wai-middleware-static
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:   -Wall -threaded -rtsopts -auto-all -caf-all


test-suite tests
  type:           exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.6 && <5,
                       deepseq >=1.3 && <1.4,
                       binary , 
                       aeson , 
                       bimap , 
                       text , 
                       parsec, 
                       text-binary,
                       time , 
                       old-locale , 
                       mtl , 
                       containers , 
                       unordered-containers , 
                       vector , 
                       vector-binary-instances ,
                       yaml , 
                       cron ,
                       NetSNMP,
                       conduit, 
                       lists,
                       test-framework-quickcheck2,
                       test-framework, 
                       test-framework-hunit, 
                       test-framework-quickcheck2,
                       HUnit, 
                       scientific,
                       attoparsec , 
                       QuickCheck

source-repository head
  type: git
  branch: master
  location: https://github.com/chemist/fixmon.git
