
name:                fixmon
version:             0.1.0.0
synopsis:            Monitoring tools           
description:         Fixmon        
license:             BSD3          
license-file:        LICENSE
author:              Alexey Smirnov
maintainer:          chemistmail@gmail.com
-- copyright:           
category:            Network           
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.12

executable fixmon
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    OverloadedStrings, FlexibleInstances, GADTs, DeriveDataTypeable, ExistentialQuantification, BangPatterns, RecordWildCards, ScopedTypeVariables, DeriveGeneric, TemplateHaskell, FlexibleContexts, QuasiQuotes, GeneralizedNewtypeDeriving, StandaloneDeriving
  build-depends:       base >=4.6 && <5
                     , binary 
                     , containers 
                     , unordered-containers 
                     , hashable
                     , bytestring 
                     , time 
                     , directory 
                     , deepseq 
                     , async
                     , vector
                     , vector-binary-instances
                     , parsec
                     , yaml
                     , text
                     , text-binary
                     , mtl
                     , aeson
                     , aeson-pretty
                     , cron
                     , lists
                     , warp
                     , wai
                     , wai-extra
                     , wai-middleware-static
                     , bimap
                     , scientific
                     , unordered-containers
                     , network
                     , network-uri
                     , snmp >=0.2.0.0
                     , attoparsec
                     , http-types
                     , http-conduit
                     , conduit
                     , pipes
                     , pipes-concurrency
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:   -Wall -threaded 
--  ghc-options:   -Wall -O2



--test-suite tests
--  type:           exitcode-stdio-1.0
--  main-is:             Test.hs
--  hs-source-dirs:      src
--  default-language:    Haskell2010
--  build-depends:       base >=4.6 && <5,
--                       deepseq >=1.3 && <1.4,
--                       binary , 
--                       aeson , 
--                       bimap , 
--                       text , 
--                       parsec, 
--                       text-binary,
--                       time , 
--                       old-locale , 
--                       mtl , 
--                       containers , 
--                       unordered-containers , 
--                       vector , 
--                       vector-binary-instances ,
--                       yaml , 
--                       cron ,
--                       conduit, 
--                       lists,
--                       test-framework-quickcheck2,
--                       test-framework, 
--                       test-framework-hunit, 
--                       test-framework-quickcheck2,
--                       HUnit, 
--                       scientific,
--                       attoparsec , 
--                       QuickCheck

source-repository head
  type: git
  branch: master
  location: https://github.com/chemist/fixmon.git
